<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <EditText 
        android:id="@+id/product_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name_hint"/>
    <EditText 
        android:id="@+id/count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/count_hint"/>
    <Button
        android:id="@+id/addB"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sAddButton" />

</LinearLayout>
