<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/buttonA"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_buttonA" />
    <Button
        android:id="@+id/buttonS"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_buttonS" />
    
    <Button 
        android:id="@+id/buttonR"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_buttonR"/>
    
</LinearLayout>
